Add creator credit to index.html

--- a/index.html.html
+++ b/index.html.html
@@ -190,6 +190,7 @@
                 <p>🎯 Tilt your head <strong>RIGHT</strong> to steer right</p>
                 <p>✋ Show your <strong>PALM</strong> to pause the game</p>
                 <p>⚠️ Avoid obstacles and drive as far as you can!</p>
+                <p>Created with ❤️ by Adrija Chowdhury </p>
             </div>
             <button class="btn" onclick="startGame()">Start Game</button>
         </div>
